service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a3028-app-service
  namespace: skala3-ai1
spec:
  selector:
    app: a3028-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
